2010-04-26  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/genTopologyCore.sh: Fixing bug in creating result directory.

	* generator/plotting.sh: Generate plotting time data for a parameter setting.

	* generator/summaryAT.sh: Create summary information for all topology.
	* generator/summaryStatsAT.sh: Likewise.

	* generator/runScriptAT.sh: Run benchmark for all topology.

	* generator/genParameterSetting.sh: Adding comments.
	* generator/genTopology.sh: Likewise.
	* generator/summaryET.sh: Likewise.
	* generator/summaryStatsET.sh: Likewise.
	* generator/runScriptET.sh: Likewise.

	* generator/genTopologyCore.sh: Adding looping on constant, generate for all topology.

	* generator/summaryET.sh: Adding comments.
	* generator/runScriptET.sh: Likewise.

	* generator/plotting.sh: Create plotting data for gnuplot.

	* generator/summaryStatsET.sh: Creating statistical information from summary.
	* generator/stats.awk: Likewise.

2010-04-25  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/summaryET.sh: Create file summary for each parameter setting.

	* generator/runScriptET.sh: Run benchmark for a topology.

	* generator/genTopologyCore.sh: Renaming from generator/genExampleCore.sh.

	* generator/genTopology.sh: Renaming from generator/genExample.sh.

	* include/dlvhex/MLPSolver.hpp: Add option --forget (forgetting instantiation)
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.

2010-04-24  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/genExampleCore.sh: Generate 'interesting' examples.

2010-04-23  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/genParameterSetting.sh: Generate a complete benchmark suite for a topology.
	* generator/genExample.sh: Likewise.

	* generator/Module.cpp: Use numModules instead of numDiamond in Diamond topology.

	* include/dlvhex/MLPSolver.hpp: Choose the fastest dataset for A (using vector only).

	* generator/gen.sh: Adding Tree topology.