@@ -12,20 +12,21 @@
 # 2nd param: result directory, example: StatsCore/StatsCore-line
 #
 
-mainDir=$1
-resultDir=$2
-rm -rf $2
-mkdir $2
-DLVHEX="dlvhex --mlp --forget --num=100 --verbose=128"
+mainDir=$2
+resultDir=$3
+rm -rf $resultDir
+mkdir $resultDir
+#DLVHEX="dlvhex --mlp --forget --num=100 --verbose=128"
+DLVHEX=$1
 for dir in $mainDir/*; do 
 	if [ -d $dir ]; then
 		#execute 10 instances here
 		shortDir=${dir#$mainDir/}
-		mkdir $2/$shortDir
+		mkdir $resultDir/$shortDir
 		echo "process $shortDir"
 		for i in {1..10}
 		do
-			(ulimit -v 1048576 ; /usr/bin/time --verbose -o $2/$shortDir/time-$shortDir-i$i.log $DLVHEX $mainDir/$shortDir/$shortDir-i$i-*.mlp) 2>$2/$shortDir/stats-$shortDir-i$i.log 1>/dev/null
+			(ulimit -v 1048576 ; /usr/bin/time --verbose -o $resultDir/$shortDir/time-$shortDir-i$i.log $DLVHEX $mainDir/$shortDir/$shortDir-i$i-*.mlp) 2>$resultDir/$shortDir/stats-$shortDir-i$i.log 1>/dev/null
 			echo "$i instances(s) processed"
 		done
 		echo $curdir
